cabal-version: 3.0

name: aws-secrets
version: 0.0.0.1
category: AWS, Password
synopsis: Fetch data from AWS Secrets Manager

description:
    This library can be used to fetch data from AWS Secrets Manager.
    It depends on the AWS Command Line Interface.

copyright: 2023 Mission Valley Software LLC
license: MIT
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/aws-secrets

extra-source-files:
    *.md
    test/*.json

common base
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wmissing-deriving-strategies
    default-extensions:
        BlockArguments
        DerivingVia
        LambdaCase
        NoImplicitPrelude
        OverloadedLists
        OverloadedStrings
        QuasiQuotes
    build-depends:
      , aeson ^>= 2.1 || ^>= 2.2
      , base ^>= 4.18 || ^>= 4.19
      , bytestring ^>= 0.11 || ^>= 0.12
      , containers ^>= 0.6.5
      , mtl ^>= 2.2.2 || ^>= 2.3
      , scientific ^>= 0.3.6
      , stm ^>= 2.5
      , text ^>= 2.0 || ^>= 2.1
      , typed-process ^>= 0.2.10
      , validation ^>= 1.1

library
    import: base
    hs-source-dirs: library
    exposed-modules:
        AWS.Secrets
        AWS.Secrets.Config
        AWS.Secrets.Fetch
        AWS.Secrets.Key
        AWS.Secrets.Name
        AWS.Secrets.Reader
        AWS.Secrets.SecretType

test-suite test-aws-secrets
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
      , aws-secrets
      , hspec ^>= 2.9 || ^>= 2.10 || ^>= 2.11
